--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <header>
       <h1 class = "name">Cristian Corrales</h1>
       <nav>
-        <ul class="navbar">
+        <ul class="navbar clearfix">
           <li><a href="#">HOME</a></li>
           <li><a href="#portfolio">PORTFOLIO</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
       </nav>
     </header>
-    <div class="intro">
+    <div class="intro clearfix greyed-text">
       <img class="profile-pic" src="images/responsive-layout-profile.png" alt="animated picture of a person in yellow background.">
       <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end
         web development at Treehouse and am excited to put all my skills to use!
@@ -30,35 +30,41 @@
     </div>
   </div>
   <main>
-    <div class="wrap middle-section">
+    <div class="wrap middle-section clearfix">
       <section id="portfolio">
         <h2>Portfolio</h2>
-
+        <div class = "project">
         <img class="portfolio-img" src="images/portfolio-1.png" alt="A browser window in front of a blue background.">
         <h3>Marketing Page</h3>
         <p>This project shows the front page of a marketing website meant for a specific business im interested in.</p>
-
+      </div>
+      <div class = "project">
         <img class="portfolio-img" src="images/portfolio-2.png" alt="A browser window with a bar graph and text box in front of a yellow background.">
         <h3>Search Page</h3>
         <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-
+      </div>
+      <div class = "project">
         <img class="portfolio-img" src="images/portfolio-3.png" alt="browser window with content in front of a blue background.">
         <h3>Travel App</h3>
         <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-
+      </div>
+      <div class = "project">
         <img class="portfolio-img" src="images/portfolio-4.png" alt="A browser window with a gps map in front of a light green background.">
         <h3>Map of Favorite Spots</h3>
         <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking
           tour.</p>
-
+      </div>
+      <div class = "project">
         <img class="portfolio-img" src="images/portfolio-5.png" alt="A browser window with images in front of a purple background.">
         <h3>Photo Gallery</h3>
         <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
         </p>
-
+      </div>
+      <div class = "project">
         <img class="portfolio-img" src="images/portfolio-6.png" alt="A calculator app in front of a grey background">
         <h3>Calculator</h3>
         <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+      </div>
       </section>
       </div>
   </main>
@@ -76,6 +82,13 @@
     <hr>
     <div class = "footer-action clearfix">
     <a class = "name-footer" href = "#">Cristian Corrales</a>
+    <nav>
+      <ul class="footer-navbar">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </nav>
     <a class = "to-top" href="#">Back To The Top</a>
     </div>
   </footer>
