--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="wrap">
-    <header class="clearfix">
+    <header class="top-page-nav">
       <h1 class="name">Cristian Corrales</h1>
       <nav>
         <ul class="navbar">
@@ -22,7 +22,7 @@
         </ul>
       </nav>
     </header>
-    <div class="intro clearfix">
+    <div class="intro">
       <img class="profile-pic" src="images/responsive-layout-profile.png" alt="animated picture of a person in yellow background.">
       <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end
         web development at Treehouse and am excited to put all my skills to use!
@@ -30,43 +30,43 @@
     </div>
   </div>
   <main>
-    <div class="wrap middle-section clearfix">
-      <section id="portfolio">
+    <section id="portfolio">
         <h2>Portfolio</h2>
-        <div class="project">
-          <img class="portfolio-img" src="images/portfolio-1.png" alt="A browser window in front of a blue background.">
-          <h3>Marketing Page</h3>
-          <p>This project shows the front page of a marketing website meant for a specific business im interested in.</p>
+        <div class="container wrap">
+          <div class="project">
+            <img class="portfolio-img" src="images/portfolio-1.png" alt="A browser window in front of a blue background.">
+            <h3>Marketing Page</h3>
+            <p>This project shows the front page of a marketing website meant for a specific business im interested in.</p>
+          </div>
+          <div class="project">
+            <img class="portfolio-img" src="images/portfolio-2.png" alt="A browser window with a bar graph and text box in front of a yellow background.">
+            <h3>Search Page</h3>
+            <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+          </div>
+          <div class="project">
+            <img class="portfolio-img" src="images/portfolio-3.png" alt="browser window with content in front of a blue background.">
+            <h3>Travel App</h3>
+            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+          </div>
+          <div class="project">
+            <img class="portfolio-img" src="images/portfolio-4.png" alt="A browser window with a gps map in front of a light green background.">
+            <h3>Map of Favorite Spots</h3>
+            <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking
+              tour.</p>
+          </div>
+          <div class="project">
+            <img class="portfolio-img" src="images/portfolio-5.png" alt="A browser window with images in front of a purple background.">
+            <h3>Photo Gallery</h3>
+            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
+            </p>
+          </div>
+          <div class="project">
+            <img class="portfolio-img" src="images/portfolio-6.png" alt="A calculator app in front of a grey background">
+            <h3>Calculator</h3>
+            <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+          </div>
         </div>
-        <div class="project">
-          <img class="portfolio-img" src="images/portfolio-2.png" alt="A browser window with a bar graph and text box in front of a yellow background.">
-          <h3>Search Page</h3>
-          <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-        </div>
-        <div class="project">
-          <img class="portfolio-img" src="images/portfolio-3.png" alt="browser window with content in front of a blue background.">
-          <h3>Travel App</h3>
-          <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-        </div>
-        <div class="project">
-          <img class="portfolio-img" src="images/portfolio-4.png" alt="A browser window with a gps map in front of a light green background.">
-          <h3>Map of Favorite Spots</h3>
-          <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking
-            tour.</p>
-        </div>
-        <div class="project">
-          <img class="portfolio-img" src="images/portfolio-5.png" alt="A browser window with images in front of a purple background.">
-          <h3>Photo Gallery</h3>
-          <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
-          </p>
-        </div>
-        <div class="project">
-          <img class="portfolio-img" src="images/portfolio-6.png" alt="A calculator app in front of a grey background">
-          <h3>Calculator</h3>
-          <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-        </div>
-      </section>
-    </div>
+  </section>
   </main>
   <div class="wrap">
     <footer>
@@ -80,7 +80,7 @@
         </ul>
       </section>
       <hr>
-      <div class="footer-action clearfix">
+      <div class="footer-action">
         <a class="name-footer" href="#">Cristian Corrales</a>
         <nav>
           <ul class="footer-navbar">
