--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     </div>
   </div>
   <main>
-    <section id="portfolio">
+    <section class = "container wrap" id="portfolio">
         <h2>Portfolio</h2>
-        <div class="container wrap">
           <div class="project">
             <img class="portfolio-img" src="images/portfolio-1.png" alt="A browser window in front of a blue background.">
             <h3>Marketing Page</h3>
@@ -65,7 +64,6 @@
             <h3>Calculator</h3>
             <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
           </div>
-        </div>
   </section>
   </main>
   <div class="wrap">
